# analink

./: Architecture.md  README.md  pyproject.toml  repo_management.py  textual_elements.py
notebooks/: fake_test.ipynb  manual_read_story.ipynb  playground.ipynb  second_playground.ipynb
notebooks/test_data/: the_intercept.ink
notebooks/test_data/documentation_data/: 001.mermaid  002.mermaid  003.mermaid  004.ink  004.mermaid  005.ink  005.mermaid  006.mermaid  007.ink  007.mermaid  008.ink  008.mermaid  009.ink  009.mermaid  010.ink  010.mermaid  011.ink  011.mermaid  012.ink  012.mermaid  013.ink  013.mermaid  014.ink  014.mermaid  015.ink  015.mermaid  016.ink  017.ink  017.mermaid  018.ink  018.mermaid  019.ink  019.mermaid  020.ink  020.mermaid  021.ink  021.mermaid  022.ink  022.mermaid  023.ink  (+4 more)
notebooks/test_data/documentation_data/includes/: 021_1.ink
src/analink/: models.py  old_models.py  old_parser.py  play.py
src/analink/core/: condition.py  line_parser.py  models.py  parser.py  status.py  story_engine.py
src/analink/examples/: from_file.py  simple_story.py
src/analink/parser/: base.py  choice.py  condition.py  container.py  graph_story.py  knots.py  line.py  node.py  status.py  story.py  tool.py  utils.py
src/analink/ui/: from_textual.py  styles.py
test/: test_parser.py
test/src/analink/: test_from_ink_code.py
test/src/analink/core/: test_condition.py  test_line_parser.py  test_models.py  test_parser.py  test_story_engine.py
test/src/analink/parser/: test_condition.py  test_container.py  test_graph_story.py  test_line.py  test_node.py  (+2 more)
